# ggml-simple

./: README.md
examples/ggml-simple/: CMakeLists.txt  ggml-simple.cpp
