cmake_minimum_required(VERSION 3.14)
project(ggml-simple)

set(TARGET ggml-simple)
add_executable(${TARGET} ggml-simple.cpp)
install(TARGETS ${TARGET} RUNTIME)
target_link_libraries(${TARGET} PRIVATE ggml ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET} PRIVATE cxx_std_11)
if (GGML_CUDA)
    add_compile_definitions(GGML_USE_CUDA)
endif()
if (GGML_METAL)
    add_compile_definitions(GGML_USE_METAL)
endif()
